[package]
name = "typst-budoux"
version = "0.0.0" # リリース時にタグ（vX.Y.Z）からCIが上書きする
edition = "2024"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
budoux-phf-rs = { version = "0.1", default-features = false, features = ["alloc", "ja"] }
wasm-minimal-protocol = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
